:sparkles: Add 1.21.4 support