@@ -39,20 +39,18 @@ import org.bukkit.event.player.PlayerInteractEvent;
 import org.bukkit.inventory.EquipmentSlot;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.potion.PotionEffect;
-import org.bukkit.scheduler.BukkitScheduler;
-import org.bukkit.scheduler.BukkitTask;
 
 import java.util.*;
+import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
-import java.util.function.Consumer;
 
 import static io.th0rgal.oraxen.mechanics.provided.gameplay.block.BlockMechanicFactory.getBlockMechanic;
 
 public class BreakerSystem {
 
     public static final List<HardnessModifier> MODIFIERS = new ArrayList<>();
-    private final Map<Location, BukkitScheduler> breakerPerLocation = new HashMap<>();
-    private final Map<Location, BukkitTask> breakerPlaySound = new HashMap<>();
+    private final Map<Location, fr.euphyllia.energie.model.Scheduler> breakerPerLocation = new HashMap<>();
+    private final Map<Location, fr.euphyllia.energie.model.SchedulerTaskInter> breakerPlaySound = new HashMap<>();
     private final PacketAdapter listener = new PacketAdapter(OraxenPlugin.get(),
             ListenerPriority.LOW, PacketType.Play.Client.BLOCK_DIG) {
         @Override
@@ -68,12 +66,12 @@ public class BreakerSystem {
                     .getEnumModifier(EnumWrappers.PlayerDigType.class, 2);
             EnumWrappers.PlayerDigType type;
             try {
-                type = data.getValues().get(0);
+                type = data.getValues().getFirst();
             } catch (IllegalArgumentException exception) {
                 type = EnumWrappers.PlayerDigType.SWAP_HELD_ITEMS;
             }
 
-            final BlockPosition pos = dataTemp.getValues().get(0);
+            final BlockPosition pos = dataTemp.getValues().getFirst();
             final World world = player.getWorld();
             final Block block = world.getBlockAt(pos.getX(), pos.getY(), pos.getZ());
             final Location location = block.getLocation();
@@ -112,21 +110,21 @@ public class BreakerSystem {
                     drop = stringMechanic.getDrop() != null ? stringMechanic.getDrop() : Drop.emptyDrop();
                 else drop = null;
 
-                Bukkit.getScheduler().runTask(OraxenPlugin.get(), () ->
+                OraxenPlugin.getScheduler().runTask(fr.euphyllia.energie.model.SchedulerType.SYNC, player, playerTask ->
                         player.addPotionEffect(new PotionEffect(PotionUtils.getEffectType("mining_fatigue"),
                                 (int) (period * 11),
                                 Integer.MAX_VALUE,
-                                false, false, false)));
+                                false, false, false)), null);
 
                 if (breakerPerLocation.containsKey(location))
-                    breakerPerLocation.get(location).cancelTasks(OraxenPlugin.get());
+                    breakerPerLocation.get(location).cancelAllTask();
 
-                final BukkitScheduler scheduler = Bukkit.getScheduler();
+                final fr.euphyllia.energie.model.Scheduler scheduler = OraxenPlugin.getScheduler();
                 // Cancellation state is being ignored.
                 // However still needs to be called for plugin support.
                 final PlayerInteractEvent playerInteractEvent =
                         new PlayerInteractEvent(player, Action.LEFT_CLICK_BLOCK, player.getInventory().getItemInMainHand(), block, blockFace, EquipmentSlot.HAND);
-                scheduler.runTask(OraxenPlugin.get(), () -> Bukkit.getPluginManager().callEvent(playerInteractEvent));
+                scheduler.runTask(fr.euphyllia.energie.model.SchedulerType.SYNC, player, task -> Bukkit.getPluginManager().callEvent(playerInteractEvent), null);
 
                 breakerPerLocation.put(location, scheduler);
 
@@ -139,13 +137,13 @@ public class BreakerSystem {
                 // Methods for sending multi-barrier block-breaks
                 final List<Location> furnitureBarrierLocations = furnitureBarrierLocations(furnitureMechanic, block);
                 final HardnessModifier modifier = triggeredModifier;
-                startBlockHitSound(location);
+                startBlockHitSound(location); java.util.concurrent.atomic.AtomicInteger value = new java.util.concurrent.atomic.AtomicInteger(0);
 
-                scheduler.runTaskTimer(OraxenPlugin.get(), new Consumer<>() {
-                    int value = 0;
+                scheduler.runAtFixedRate(fr.euphyllia.energie.model.SchedulerType.SYNC, location, bukkitTask -> { if (bukkitTask == null) return;
+                    //int value = 0;
 
-                    @Override
-                    public void accept(final BukkitTask bukkitTask) {
+                    //@Override
+                    //public void accept(final BukkitTask bukkitTask) {
                         if (!breakerPerLocation.containsKey(location)) {
                             bukkitTask.cancel();
                             stopBlockHitSound(location);
@@ -153,40 +151,40 @@ public class BreakerSystem {
                         }
 
                         if (item.getEnchantmentLevel(EnchantmentWrapper.EFFICIENCY) >= 5)
-                            value = 10;
+                            value.set(10);
 
                         for (final Entity entity : world.getNearbyEntities(location, 16, 16, 16)) {
                             if (entity instanceof Player viewer) {
                                 if (furnitureMechanic != null) for (Location barrierLoc : furnitureBarrierLocations)
-                                    sendBlockBreak(viewer, barrierLoc, value);
-                                else sendBlockBreak(viewer, location, value);
+                                    sendBlockBreak(viewer, barrierLoc, value.get());
+                                else sendBlockBreak(viewer, location, value.get());
                             }
                         }
 
-                        if (value++ < 10) return;
+                        if (value.getAndIncrement() < 10) return;
                         if (EventUtils.callEvent(new BlockBreakEvent(block, player)) && ProtectionLib.canBreak(player, location)) {
                             // Damage item with properties identified earlier
                             ItemUtils.damageItem(player, drop, item);
                             modifier.breakBlock(player, block, item);
                         } else stopBlockHitSound(location);
 
-                        scheduler.runTask(OraxenPlugin.get(), () ->
-                                player.removePotionEffect(PotionUtils.getEffectType("mining_fatigue")));
+                        OraxenPlugin.getScheduler().runTask(fr.euphyllia.energie.model.SchedulerType.SYNC, player, task ->
+                                player.removePotionEffect(PotionUtils.getEffectType("mining_fatigue")), null);
 
                         stopBlockBreaker(location);
                         stopBlockHitSound(location);
                         for (final Entity entity : world.getNearbyEntities(location, 16, 16, 16)) {
                             if (entity instanceof Player viewer) {
                                 if (furnitureMechanic != null) for (Location barrierLoc : furnitureBarrierLocations)
-                                    sendBlockBreak(viewer, barrierLoc, value);
-                                else sendBlockBreak(viewer, location, value);
+                                    sendBlockBreak(viewer, barrierLoc, value.get());
+                                else sendBlockBreak(viewer, location, value.get());
                             }
                         }
                         bukkitTask.cancel();
-                    }
+                    //}
                 }, period, period);
             } else {
-                Bukkit.getScheduler().runTask(OraxenPlugin.get(), () -> {
+                OraxenPlugin.getScheduler().runTask(fr.euphyllia.energie.model.SchedulerType.SYNC, player, playerTask -> {
                     player.removePotionEffect(PotionUtils.getEffectType("mining_fatigue"));
                     if (!ProtectionLib.canBreak(player, location))
                         player.sendBlockChange(location, block.getBlockData());
@@ -196,17 +194,20 @@ public class BreakerSystem {
                             sendBlockBreak(viewer, location, 10);
                     stopBlockBreaker(location);
                     stopBlockHitSound(location);
-                });
+                }, null);
             }
         }
     };
 
     private List<Location> furnitureBarrierLocations(FurnitureMechanic furnitureMechanic, Block block) {
-        BukkitScheduler scheduler = breakerPerLocation.get(block.getLocation());
+        fr.euphyllia.energie.model.Scheduler scheduler = breakerPerLocation.get(block.getLocation());
         if (scheduler == null) return List.of(block.getLocation());
 
         AtomicReference<Entity> furnitureBaseEntity = new AtomicReference<>();
-        scheduler.runTask(OraxenPlugin.get(), () -> furnitureBaseEntity.set(furnitureMechanic != null ? furnitureMechanic.getBaseEntity(block) : null));
+        Entity entity = furnitureMechanic != null ? furnitureMechanic.getBaseEntity(block) : null;
+        if (entity != null) {
+            scheduler.runTask(fr.euphyllia.energie.model.SchedulerType.SYNC, entity, task -> furnitureBaseEntity.set(entity), null);
+        }
         return furnitureMechanic != null && furnitureBaseEntity.get() != null
                 ? furnitureMechanic.getLocations(FurnitureMechanic.getFurnitureYaw(furnitureBaseEntity.get()),
                 furnitureBaseEntity.get().getLocation(), furnitureMechanic.getBarriers())
@@ -214,7 +215,7 @@ public class BreakerSystem {
     }
 
     private boolean blockDamageEventCancelled(Block block, Player player) {
-        BukkitScheduler scheduler = breakerPerLocation.get(block.getLocation());
+        fr.euphyllia.energie.model.Scheduler scheduler = breakerPerLocation.get(block.getLocation());
         if (scheduler == null) return false;
 
         switch (block.getType()) {
@@ -222,27 +223,19 @@ public class BreakerSystem {
                 NoteBlockMechanic mechanic = OraxenBlocks.getNoteBlockMechanic(block);
                 if (mechanic == null) return true;
                 OraxenNoteBlockDamageEvent event = new OraxenNoteBlockDamageEvent(mechanic, block, player);
-                scheduler.runTask(OraxenPlugin.get(), () -> Bukkit.getPluginManager().callEvent(event));
+                scheduler.runTask(fr.euphyllia.energie.model.SchedulerType.SYNC, player, (schedulerTaskInter) -> Bukkit.getPluginManager().callEvent(event), null);
                 return event.isCancelled();
             }
             case TRIPWIRE -> {
                 StringBlockMechanic mechanic = OraxenBlocks.getStringMechanic(block);
                 if (mechanic == null) return true;
                 OraxenStringBlockDamageEvent event = new OraxenStringBlockDamageEvent(mechanic, block, player);
-                scheduler.runTask(OraxenPlugin.get(), () -> Bukkit.getPluginManager().callEvent(event));
+                scheduler.runTask(fr.euphyllia.energie.model.SchedulerType.SYNC, player, (schedulerTaskInter) -> Bukkit.getPluginManager().callEvent(event), null);
                 return event.isCancelled();
             }
             case BARRIER -> {
                 try {
-                    return scheduler.callSyncMethod(OraxenPlugin.get(), () -> {
-                        FurnitureMechanic mechanic = OraxenFurniture.getFurnitureMechanic(block);
-                        if (mechanic == null) return true;
-                        Entity baseEntity = mechanic.getBaseEntity(block);
-                        if (baseEntity == null) return true;
-                        OraxenFurnitureDamageEvent event = new OraxenFurnitureDamageEvent(mechanic, baseEntity, player, block);
-                        scheduler.runTask(OraxenPlugin.get(), () -> Bukkit.getPluginManager().callEvent(event));
-                        return event.isCancelled();
-                    }).get();
+                    return barrierDamageEventCancelled(block, player).get(2, TimeUnit.SECONDS);
                 } catch (Exception e) {
                     return false;
                 }
@@ -256,6 +249,25 @@ public class BreakerSystem {
         }
     }
 
+    private java.util.concurrent.CompletableFuture<Boolean> barrierDamageEventCancelled(Block block, Player player) {
+        java.util.concurrent.CompletableFuture<Boolean> future = new java.util.concurrent.CompletableFuture<>();
+        Bukkit.getRegionScheduler().execute(OraxenPlugin.get(), block.getLocation(), () -> {
+            FurnitureMechanic mechanic = OraxenFurniture.getFurnitureMechanic(block);
+            if (mechanic == null) {
+                future.complete(true); return;
+            }
+            Entity baseEntity = mechanic.getBaseEntity(block);
+            if (baseEntity == null) {
+                future.complete(true); return;
+            }
+            OraxenFurnitureDamageEvent event = new OraxenFurnitureDamageEvent(mechanic, baseEntity, player, block);
+            Bukkit.getPluginManager().callEvent(event);
+            future.complete(event.isCancelled());
+        });
+
+        return future;
+    }
+
     private void sendBlockBreak(final Player player, final Location location, final int stage) {
         final PacketContainer packet = ProtocolLibrary.getProtocolManager().createPacket(PacketType.Play.Server.BLOCK_BREAK_ANIMATION);
         packet.getIntegers().write(0, location.hashCode()).write(1, stage);
@@ -266,13 +278,13 @@ public class BreakerSystem {
 
     private void stopBlockBreaker(Location location) {
         if (breakerPerLocation.containsKey(location)) {
-            breakerPerLocation.get(location).cancelTasks(OraxenPlugin.get());
+            breakerPerLocation.get(location).cancelAllTask();
             breakerPerLocation.remove(location);
         }
     }
 
     private void startBlockHitSound(Location location) {
-        BukkitScheduler scheduler = breakerPerLocation.get(location);
+        fr.euphyllia.energie.model.Scheduler scheduler = breakerPerLocation.get(location);
         BlockSounds blockSounds = getBlockSounds(location.getBlock());
 
         if (scheduler == null || blockSounds == null || !blockSounds.hasHitSound()) {
@@ -280,13 +292,14 @@ public class BreakerSystem {
             return;
         }
 
-        breakerPlaySound.put(location, scheduler.runTaskTimer(OraxenPlugin.get(),
-                () -> BlockHelpers.playCustomBlockSound(location, getHitSound(location.getBlock()), blockSounds.getHitVolume(), blockSounds.getHitPitch())
-                , 0L, 4L));
+        breakerPlaySound.put(location, scheduler.runAtFixedRate(fr.euphyllia.energie.model.SchedulerType.SYNC, location,
+                (schedulerTaskInter) -> BlockHelpers.playCustomBlockSound(location, getHitSound(location.getBlock()), blockSounds.getHitVolume(), blockSounds.getHitPitch())
+                , 1L, 4L));
     }
 
     private void stopBlockHitSound(Location location) {
-        Optional.ofNullable(breakerPlaySound.get(location)).ifPresent(BukkitTask::cancel);
+        fr.euphyllia.energie.model.SchedulerTaskInter value = breakerPlaySound.get(location);
+        if (value != null) value.cancel();
         breakerPlaySound.remove(location);
     }
 
